@@ -1,6 +1,13 @@
 2007-05-30  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
+	- Supply the cache dir to scorerender_remove_cache() as argument, so
+	this function becomes more generic.
+	- Also show error in dashboard if cache dir is not readable.
+
+2007-05-30  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
 	scorerender_process_result() --> scorerender_process_content(), and
 	drop one redundant parameter.
 
